<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="auto"
        android:summary="@string/prefAutopictureSummary"
        android:title="@string/prefAutopicture">
    </CheckBoxPreference>
    <EditTextPreference
        android:key="interval"
        android:hint="@string/prefEditHint"
        android:inputType="number"
        android:maxLength="1"
        android:summary="@string/prefEditTextSummary"
        android:title="@string/prefEditTextTitle">
    </EditTextPreference>
    <ListPreference
        android:entries="@array/entries"
        android:entryValues="@array/entry_values"
        android:key="list"
        android:summary="@string/prefListAnimSummary"
        android:title="@string/prefListAnimTitle">
    </ListPreference>
    <CheckBoxPreference
        android:key="favorite"
        android:summary="@string/prefChbFavoriteSummary"
        android:title="@string/prefChbFavoriteTitle">
    </CheckBoxPreference>
    <CheckBoxPreference
        android:key="random"
        android:summary="@string/prefChbRandomSummary"
        android:title="@string/prefChbRandomTitle">
    </CheckBoxPreference>
</PreferenceScreen>